# The-last-time

./: .gitignore  CMakeLists.txt  LICENSE  README.md  setup.bat
.github/workflows/: c-cpp.yml
src/: main.cpp
src/accelerator/: bvh.cpp  bvh.h  embreebvh.cpp  embreebvh.h
src/bsdf/: blendbsdf.h  bsdfutil.cpp  bsdfutil.h  conductor.h  dielectric.h  iridescence.h  matte.h  microfacet.cpp  microfacet.h  mirror.h  svbrdf.h  transparent.h
src/core/: camera.h  color.h  framebuffer.cpp  framebuffer.h  global.h  integrator.cpp  integrator.h  parse.cpp  parse.h  primitive.cpp  primitive.h  record.cpp  record.h  renderer.cpp  renderer.h  sampler.h  sampling.cpp  sampling.h  scene.cpp  scene.h  spectrum.cpp  spectrum.h  texture.h  transform.cpp  transform.h  vector.h
src/ext/stb_image/: stb_image_write.h
src/gui/: imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp
src/integrator/: director.cpp  director.h  pathguider.cpp  pathguider.h  pathtracer.cpp  pathtracer.h  photon.cpp  photon.h  pppm.cpp  pppm.h  sppm.cpp  sppm.h  volumepathtracer.cpp  volumepathtracer.h  vppm.cpp  vppm.h
src/light/: arealight.cpp  arealight.h  directional.cpp  directional.h  environment.cpp  environment.h  point.cpp  point.h
src/medium/: grid.cpp  grid.h  heterogeneous.cpp  heterogeneous.h  hg.cpp  hg.h  homogeneous.h
src/sampler/: independent.h
src/shape/: triangle.cpp  triangle.h
src/texture/: checker.h  consttexture.h  imagemap.cpp  imagemap.h
src/utility/: imageio.cpp  imageio.h  math.cpp  math.h  timer.h
